--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h1,h2,h3,h4,h5,h6,p{
+    margin: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html{
+    box-sizing: border-box;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 1;
+*,*::after,*::before{
+    box-sizing: inherit;
 }
 
-html {
-  box-sizing: border-box;
+img{
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
+address{
+    font-style: normal;
 }
 
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+.link{
+    text-decoration: none;
+    color: inherit;
+}
+
+.list{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.inputPhone {
+  margin-bottom: 10px;
+}
+
+.textInputStyle {
+  padding: 5px;
 }
